updated path to libraries

--- a/notebooks/ground_detection/load_variables.ipynb
+++ b/notebooks/ground_detection/load_variables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,15 +29,15 @@
     "from smutsia.point_cloud import filter_points\n",
     "from smutsia.utils.semantickitti import load_pyntcloud\n",
     "from smutsia.point_cloud.normals import get_normals\n",
-    "from smutsia.utils.graph import cloud_knn_graph, cloud_spherical_graph, merge_graphs\n",
-    "from smutsia.morphology.segmentation.metrics import z_nz_dist\n",
+    "from smutsia.graph import cloud_knn_graph, cloud_spherical_graph, merge_graphs\n",
+    "from smutsia.morphology.segmentation import z_nz_dist\n",
     "from smutsia.morphology.segmentation import quasi_flat_zones\n",
     "from smutsia.utils.semantickitti import SemanticKittiConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
